--- a/index.ipynb
+++ b/index.ipynb
@@ -5718,13 +5718,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 401,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>h1n1_vaccine</th>\n",
+       "      <th>seasonal_vaccine</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>respondent_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26707</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26708</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26709</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26710</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26711</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53410</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53411</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53412</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53413</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53414</th>\n",
+       "      <td>0.847969</td>\n",
+       "      <td>0.77774</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26708 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               h1n1_vaccine  seasonal_vaccine\n",
+       "respondent_id                                \n",
+       "26707              0.847969           0.77774\n",
+       "26708              0.847969           0.77774\n",
+       "26709              0.847969           0.77774\n",
+       "26710              0.847969           0.77774\n",
+       "26711              0.847969           0.77774\n",
+       "...                     ...               ...\n",
+       "53410              0.847969           0.77774\n",
+       "53411              0.847969           0.77774\n",
+       "53412              0.847969           0.77774\n",
+       "53413              0.847969           0.77774\n",
+       "53414              0.847969           0.77774\n",
+       "\n",
+       "[26708 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#convert submission to csv\n",
     "submission.to_csv('submission_format.csv')\n",
     "submission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "* People who received the seasonal vaccine outperformed those who received the H1N1 vaccine.\n",
+    "* Women received both immunizations at a higher rate than males.\n",
+    "* White folks received both immunizations at a higher rate than other races.\n",
+    "* People with health insurance chose seasonal vaccines over H1N1 vaccines.\n",
+    "* More People chose the seasonal vaccine over the H1N1 vaccine based on doctor’s recommendations.\n",
+    "* There were fewer persons seeking both immunizations than predicted.\n",
+    "* In addition, children were not as well immunized as planned."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recommendations\n",
+    "Based on the conclusion drawn from the data, here are a few recommendations that could be made:\n",
+    "\n",
+    "* Promote the importance of the seasonal flu vaccine over the H1N1 vaccine, highlighting its higher efficacy and safety record.\n",
+    "* Encourage greater immunization rates among males and people of other races, perhaps through targeted outreach and education initiatives.\n",
+    "* Address the issue of access to health insurance, as it appears to impact vaccine choice.\n",
+    "* Encourage more people to seek recommendations from their healthcare providers, as this seems to be a significant factor in vaccine choice.\n",
+    "* Address the low immunization rate among children by increasing awareness of the importance of protecting this vulnerable population and providing easier access to vaccines for families with young children.\n",
+    "* Consider additional strategies to increase overall immunization rates, such as offering incentives or increasing accessibility to vaccines.\n",
+    "* Further analysis and research may be needed to understand and address the underlying issues more effectively."
    ]
   }
  ],
