--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "# Metric of success\n",
-    "Performance will be evaluated according to the area under the receiver operating characteristic curve (ROC AUC) for each of the two target variables. "
+    "The final accuracy of the models will be used to evaluate their performance."
    ]
   },
   {
@@ -1457,13 +1457,6 @@
     "#loading the submission_format dataset\n",
     "submission_format=pd.read_csv ('submission_format.csv')\n",
     "submission_format.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data Preparation"
    ]
   },
   {
@@ -5178,7 +5171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation"
+    "# EVALUATION"
    ]
   },
   {
@@ -5298,13 +5291,6 @@
     " \n",
     "output\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
